框架结构大调整

--- a/config.json
+++ b/config.json
@@ -3,32 +3,19 @@
      "options": {
          "optimize": "none",
          "baseUrl": "./core",
-         "shim": {
-             "underscore": {
-                 "exports": "_"
-             },
-             "jquery": {
-                 "exports": "$"
-             }
-         },
-         "paths": {
-             "underscore": "3rdlib/underscore",
-             "jquery": "3rdlib/jquery1.11",
-             "text": "3rdlib/text",
-             "axis": "chartlib/axis/axis",
-             "axis_x": "chartlib/axis/axis_x",
-             "axis_y": "chartlib/axis/axis_y",
-             "chart": "chartlib/chart/chart"
-         },
-         "out": "core/chart.min.js",
-         "exclude": [
-             "jquery"
-         ],
+         "mainConfigFile":"core/config.js",
+         "out": "public/js/lib/g4.min.js",
+         "exclude": [],
          "include": [
+             "underscore",
+             "jquery",
+             "text",
              "axis",
              "axis_x",
              "axis_y",
-             "chart"
+             "chart",
+             "util",
+             "g4"
          ]
      }
  }
